--- a/bpi-streamer.service
+++ b/bpi-streamer.service
@@ -5,15 +5,15 @@ StartLimitIntervalSec=0
 
 [Service]
 Type=simple
-Restart=no
-User=root
-WorkingDirectory=/root
-ExecStart=/usr/bin/bash /root/stream_with_audio.sh
+Restart=onAbort
+User=pi
+WorkingDirectory=/home/pi/BananaPi-Camcorder
+ExecStart=/usr/bin/bash /home/pi/BananaPi-Camcorder/stream.sh
 KillSignal=SIGTERM
-TimeoutStopSec=10
-FinalKillSignal=SIGKILL
-CPUSchedulingPolicy=rr
-CPUSchedulingPriority=70
+#TimeoutStopSec=10
+#FinalKillSignal=SIGKILL
+#CPUSchedulingPolicy=rr
+#CPUSchedulingPriority=70
 
 [Install]
 WantedBy=multi-user.target
