--- a/dontUse/withMic/sun8i-h2-plus-bananapi-m2-zero.dts
+++ b/dontUse/withMic/sun8i-h2-plus-bananapi-m2-zero.dts
@@ -30,8 +30,8 @@
 	reg_cam_dovdd: cam-dovdd {
 		compatible = "regulator-fixed";
 		regulator-name = "csi-dovdd";
-		regulator-min-microvolt = <1800000>;
-		regulator-max-microvolt = <1800000>;
+		regulator-min-microvolt = <2800000>;
+		regulator-max-microvolt = <2800000>;
 		/*
 		 * This regulator also powers the pull-ups for the I2C bus.
 		 * For some reason, if this is turned off, subsequent use
@@ -56,10 +56,32 @@
 	aliases {
 		serial0 = &uart0;
 		serial1 = &uart1;
+        ethernet0 = &emac;
 	};
 
 	chosen {
 		stdout-path = "serial0:115200n8";
+	};
+
+    	connector {
+		compatible = "hdmi-connector";
+		type = "a";
+
+		port {
+			hdmi_con_in: endpoint {
+				remote-endpoint = <&hdmi_out_con>;
+			};
+		};
+	};
+
+	leds {
+		compatible = "gpio-leds";
+
+		pwr_led {
+			label = "bananapi-m2-zero:red:pwr";
+			gpios = <&r_pio 0 10 GPIO_ACTIVE_HIGH>; /* PL10 */
+			linux,default-trigger = "heartbeat";
+		};
 	};
 
 	rfkill_bt: rfkill_bt {
@@ -107,39 +129,38 @@
 	};
 
 	codec_in: spdif-receiver {
-                #address-cells = <0>;
-                #size-cells = <0>;
-                #sound-dai-cells = <0>;
-                /* 
-                    "linux,spdif-dir" is used in generic I2S(receiver) driver.                     
-                    You can see details "linux,spdif-dir" by bellow command
-                    modinfo snd_soc_spdif_rx
-                */
-                compatible = "linux,spdif-dir";
-                status = "okay";
-        };
+        #address-cells = <0>;
+        #size-cells = <0>;
+        #sound-dai-cells = <0>;
+        /* 
+            "linux,spdif-dir" is used in generic I2S(receiver) driver.                     
+            You can see details "linux,spdif-dir" by below command
+            modinfo snd_soc_spdif_rx
+        */
+        compatible = "linux,spdif-dir";
+        status = "okay";
+    };
 
 	sound {
 	    compatible = "simple-audio-card";
-            simple-audio-card,name = "i2smycard";
-            status="okay";
+        simple-audio-card,name = "i2smycard";
+        status="okay";
 
-            capture_link: simple-audio-card,dai-link@0 {
-                format = "i2s";
-		mclk-fs = <256>;
+        capture_link: simple-audio-card,dai-link@0 {
+            format = "i2s";
+            mclk-fs = <256>;
 
-                r_cpu_dai: cpu {
-                    sound-dai = <&i2s0>;
+            r_cpu_dai: cpu {
+                sound-dai = <&i2s0>;
 
-                // TDM slot configuration for stereo
-                    dai-tdm-slot-num = <2>;
-                    dai-tdm-slot-width = <32>;
-                };
-
-                r_codec_dai: codec {
-                    sound-dai = <&codec_in>;
-                };
+                dai-tdm-slot-num = <2>;
+                dai-tdm-slot-width = <32>;
             };
+
+            r_codec_dai: codec {
+                sound-dai = <&codec_in>;
+            };
+        };
 	};
 };
 
@@ -199,6 +220,16 @@
 	status = "okay";
 };
 
+&hdmi {
+	status = "okay";
+};
+
+&hdmi_out {
+	hdmi_out_con: endpoint {
+		remote-endpoint = <&hdmi_con_in>;
+	};
+};
+
 &mixer0 {
 	status = "okay";
 };
@@ -248,7 +279,18 @@
 	status = "okay";
 };
 
+&emac {
+	status = "okay";
+	phy-handle = <&int_mii_phy>;
+	phy-mode = "mii";
+	allwinner,leds-active-low;
+};
+
 &i2s2 {
+	status = "okay";
+};
+
+&hdmi_sound {
 	status = "okay";
 };
 
